--- a/public/less/header.less
+++ b/public/less/header.less
@@ -59,7 +59,8 @@ header {
 						left: -50%;
 					}
 					&:hover .qrcode {
-						display: block;
+						display: inline-block;
+						z-index: 99;
 					}
 				}
 				&.sear {
