--- a/views/about.html
+++ b/views/about.html
@@ -390,13 +390,13 @@ content:"...";
 								<!-- 如果用户选择的身份是教育经历 -->
 									<span class="shenfen">
 										<i></i>
-										web前端 · 四川合纵医药股份有限公司
+										web前端 · 成都零点信息科技有限公司
 									</span>
 								<!-- 否则根据用户是否是应届毕业生区分用户的身份 -->
 						</div>
 						<div class="info_t">
-							<span class="base_info"><i></i>男&nbsp;&nbsp;&nbsp;24岁&nbsp;&nbsp;&nbsp;本科
-							<span class="job_span">&nbsp;1年工作经验</span><span class="birth_span dn">1993.04年出生</span>&nbsp;&nbsp;&nbsp;成都</span>
+							<span class="base_info"><i></i>男&nbsp;&nbsp;&nbsp;25岁&nbsp;&nbsp;&nbsp;本科
+							<span class="job_span">&nbsp;2年工作经验</span><span class="birth_span dn">1993.02年出生</span>&nbsp;&nbsp;&nbsp;成都</span>
 						</div>
 						<div class="info_b">
 							<span class="mobile"><i></i>18381335182</span>&nbsp;&nbsp;
@@ -426,15 +426,35 @@ content:"...";
 								<div class="clearfixs">
 									<div class="mr_content_l">
 										<div class="l2">
+											<h4>成都零点信息科技有限公司</h4>
+											<span>web前端</span>
+										</div>
+									</div>
+									<div class="mr_content_r">
+										<span>2017.01 -- 至今</span>
+									</div>
+								</div>
+
+								<div class="mr_content_m olpf">
+									<p>参与公司多个项目的开发，主要负责其中一个项目：三餐美食餐饮系统，并在后期使用vue对该系统进行重构。</p>
+								</div>
+								</div>
+								<div class="mr_jobe_list">
+								<div class="clearfixs">
+									<div class="mr_content_l">
+										<div class="l2">
 											<h4>四川合纵医药股份有限公司</h4>
 											<span>web前端</span>
 										</div>
 									</div>
 									<div class="mr_content_r">
-										<span>2016.07 -- 2017.08</span>
+										<span>2016.04 -- 2017.01</span>
 									</div>
 								</div>
 
+								<div class="mr_content_m olpf">
+									<p>维护公司官网，根据UI设计图新增官网活动页面和新页面，修复系统bug，迭代公司后台管理系统功能。<br /></p>
+								</div>
 								</div>
 							</div>
 							</div>
@@ -494,9 +514,121 @@ content:"...";
 											</div>
 										</div>
 										<div class="mr_self_site">
+                                            <a class="mr_self_sitelink" href="https://waimai.3cfood.com/spread" target="_blank">https://waimai.3cfood.com/spread</a>
+										</div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>2017.11.20-至今</p></li>
+ <li><p>根据三餐美食餐饮管理系统之平台版。使用vue+es6，完全重构了老项目的jquery+php渲染的混合页面。前后端分离开发，手动配置的webpack+babel。</p></li>
+</ul></div>
+									</div>
+								</div>
+								<div class="mr_work_online">
+									<div class="mr_wo_show">
+										<div>
+											<div class="mr_c_r_t">
+												&nbsp;
+											</div>
+										</div>
+										<div class="mr_self_site">
+                                            <a class="mr_self_sitelink" href="http://www.3cfood.com/spread" target="_blank">http://www.3cfood.com/spread</a>
+										</div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>三餐美食餐饮管理系统——解决餐厅外卖、堂食、收银、采购、配送、管理、统计、营销需求。共计十二个端。</p></li>
+ <li><p>公司最核心项目，共开发五年，并在我到岗之后新增许多功能和优化</p></li>
+</ul></div>
+									</div>
+								</div>
+								<div class="mr_work_online">
+									<div class="mr_wo_show">
+										<div>
+											<div class="mr_c_r_t">
+												&nbsp;
+											</div>
+										</div>
+										<div class="mr_self_site">
+                                            <a class="mr_self_sitelink" href="http://www.keloop.cn/admin" target="_blank">http://www.keloop.cn/admin</a>
+										</div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>快跑者——配送/调度/代办系统,抢单+派单,解决配送及管理。开放API接收各电商平台订单。配送员APP+发单商户APP+管理客户端。</p></li>
+ <li><p>大量使用高德地图api，和其他系统接口。</p></li>
+</ul></div>
+									</div>
+								</div>
+								<div class="mr_work_online">
+									<div class="mr_wo_show">
+										<div>
+											<div class="mr_c_r_t">
+												&nbsp;
+											</div>
+										</div>
+										<div class="mr_self_site">
+                                            <a class="mr_self_sitelink" href="http://www.0xiao.com/admin" target="_blank">http://www.0xiao.com/admin</a>
+										</div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>零点校园-校园生活服务平台。聚合校园外卖,校园商城,跑腿配送,云打印,租房,二手,兼职,后勤报修,智慧食堂等，并面为大学生提供创业机会。将消费、管理、创业三方融通,形成智慧校园联盟。</p></li>
+</ul></div>
+									</div>
+								</div>
+								<div class="mr_work_online">
+									<div class="mr_wo_show">
+										<div>
+											<div class="mr_c_r_t">
+												&nbsp;
+											</div>
+										</div>
+										<div class="mr_self_site">
+                                            <a class="mr_self_sitelink" href="http://www.yankeer.com/" target="_blank">http://www.yankeer.com/</a>
+										</div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>盐客——一个聚合社会化分销力量的共享平台，商家可免费快带开微店并设定优惠/返拥比例。让客户或伙伴成为优惠信息的传播者。带来订单就能自动获得预设的返佣红包。</p></li>
+</ul></div>
+									</div>
+								</div>
+								<div class="mr_work_online">
+									<div class="mr_wo_show">
+										<div>
+											<div class="mr_c_r_t">
+												&nbsp;
+											</div>
+										</div>
+										<div class="mr_self_site">
+                                            <a class="mr_self_sitelink" href="http://www.9kshop.com/spread" target="_blank">http://www.9kshop.com/spread</a>
+										</div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>九克商城系统——为创业者开发的商城系统,PC、手机、微信、app四网合一,方便、快捷的操作，智能、全面的资源统筹，清晰、明了的统计分析。专属管理客户端,打印机接单,快速开启的电商之旅。</p></li>
+</ul></div>
+									</div>
+								</div>
+								<div class="mr_work_online">
+									<div class="mr_wo_show">
+										<div>
+											<div class="mr_c_r_t">
+												&nbsp;
+											</div>
+										</div>
+										<div class="mr_self_site">
+                                            <a class="mr_self_sitelink" href="http://www.weiroot.com" target="_blank">http://www.weiroot.com</a>
+										</div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>微动力——成都零点提供的免费微信公众号,免费微信小程序开发管理平台。授权公众号,自动生成微信小程序。接入微动力,让您的微信运营丰富多彩</p></li>
+</ul>
+<p><br /></p></div>
+									</div>
+								</div>
+								<div class="mr_work_online">
+									<div class="mr_wo_show">
+										<div>
+											<div class="mr_c_r_t">
+												&nbsp;
+											</div>
+										</div>
+										<div class="mr_self_site">
                                             <a class="mr_self_sitelink" href="http://www.hezongyy.com/" target="_blank">http://www.hezongyy.com/</a>
 										</div>
-										<div class="mr_wo_preview olpf"><p>合纵医药网<br /></p></div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>合纵医药网——一家经营药品的采购、批发、销售的网上药品交易电子商务平台。</p></li>
+ <li><p>主要使用jquery、layui、lazyload等完成的页面和后台管理系统。</p></li>
+</ul></div>
 									</div>
 								</div>
 								<div class="mr_work_online">
@@ -509,17 +641,39 @@ content:"...";
 										<div class="mr_self_site">
                                             <a class="mr_self_sitelink" href="http://www.moz0.com" target="_blank">http://www.moz0.com</a>
 										</div>
-										<div class="mr_wo_preview olpf"><p>自己的个人网站，用了html5+css3，用less对css进行预处理，使用angular实现的单页面应用，用ajax异步请求的后台数据，用git进行版本控制，用gulp实现网页自动构建。</p>
-<p>此网站完全由本人独立开发。</p></div>
+										<div class="mr_wo_preview olpf"><ul>
+ <li><p>自己的个人网站，angular的单页面应用，gulp构建。没有去维护，都是些demo</p></li>
+</ul></div>
 									</div>
 								</div>
 
 								<div class="mr_work_upload">
 									<div class="mr_wu_show">
 										<div class="mr_wu_t">
-											<!-- <a href="http://www.lagou.com/http://t.cn/Rpi4gNO" target="_blank">
+											<a href="http://www.lagou.com/https://waimai.3cfood.com/spread" target="_blank">
 												<img class="wh43" src="http://www.lagou.com/" />
-											</a> -->
+											</a>
+										</div>
+										<div class="mr_wu_con">
+											<div class="clearfixs">
+												<div class="mr_content_l">
+													<div class="l2">
+													</div>
+												</div>
+
+											</div>
+											<div class="mr_wu_con_m olpf">
+												
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="mr_work_upload">
+									<div class="mr_wu_show">
+										<div class="mr_wu_t">
+											<a href="http://www.lagou.com/https://www.baidu.com" target="_blank">
+												<img class="wh43" src="http://www.lagou.com/" />
+											</a>
 										</div>
 										<div class="mr_wu_con">
 											<div class="clearfixs">
@@ -555,7 +709,7 @@ content:"...";
 									<img src="http://www.lagou.com/i/image/M00/65/49/CgpFT1mk1U2AcQkBAACjIE4qia0206.jpg" alt="杨跃"/>
 								</div>
 								<div class="mr_self_r">
-									<p>大学自学WEB前端。毕业后进入一家电商公司：四川合纵医药有限公司，从事前端工作，主要内容为前端页面开发、界面优化和性能优化。并且在一年中扎实基础，持续学习。使自己前端开发水平稳步提升。本人在工作中，踏实认真，有较强的团队意识，努力学习新知识。</p>
+									<p>我是一个能够适应各种环境的人，在零点信处科技有限公司，这个公司的前端是人员流动最大的。我在公司期间，其他前端还没有待超过三个月的。在这种情况下我依然能够很好完成公司的任务。前期维护公司历经五年的代码。后期也被安排进重构冲刺队伍中。我在工作中总是充满好奇，对新鲜技术、未知领域的好奇使我不断学习进步。所以在工作中，受到同事和领导的好评奖励。</p>
 <p>个人github:github.com/mozyy</p>
 <p>个人网站:www.moz0.com</p>
 								</div>
@@ -580,7 +734,7 @@ content:"...";
 										<li class="mr_name_li" ><i></i><span class="mr_job_name" title="web前端开发及相关工作">web前端开发及相关工作</span></li>
 										<li class="mr_jobtype_li"> <i></i><span class="mr_job_type" title="$!expectJobses.positionType">全职</span></li>
 										<li class="mr_city_li"> <i></i><span class="mr_job_adr" title="$!expectJobses.city">成都</span></li>
-										<li class="mr_jobrange_li" ><i></i><span class="mr_job_range" title="$!expectJobses.salarys">5k-10k</span></li>
+										<li class="mr_jobrange_li" ><i></i><span class="mr_job_range" title="$!expectJobses.salarys">10k-15k</span></li>
 									</ul>
 								</div>
 							</div>
@@ -600,38 +754,38 @@ content:"...";
 							<div class="mr_moudle_content">
 								<div class="mr_skill_con">
 									<span class="mr_skill_name" title="html5+css3">html5+css3</span>
-									<span class="mr_skill_plan" data-skillLevel = "73">
-									 <em style="width: 73%"></em>
+									<span class="mr_skill_plan" data-skillLevel = "72">
+									 <em style="width: 72%"></em>
 									</span>
 									<span class="mr_skill_level">精通</span>
 								</div>
 								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="javascript">javascript</span>
-									<span class="mr_skill_plan" data-skillLevel = "78">
-									 <em style="width: 78%"></em>
+									<span class="mr_skill_name" title="es5">es5</span>
+									<span class="mr_skill_plan" data-skillLevel = "79">
+									 <em style="width: 79%"></em>
 									</span>
 									<span class="mr_skill_level">精通</span>
 								</div>
 								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="jQuery">jQuery</span>
-									<span class="mr_skill_plan" data-skillLevel = "76">
-									 <em style="width: 76%"></em>
-									</span>
-									<span class="mr_skill_level">精通</span>
-								</div>
-								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="bootstrap">bootstrap</span>
-									<span class="mr_skill_plan" data-skillLevel = "54">
-									 <em style="width: 54%"></em>
-									</span>
-									<span class="mr_skill_level">掌握</span>
-								</div>
-								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="angularJS">angularJS</span>
+									<span class="mr_skill_name" title="es6">es6</span>
 									<span class="mr_skill_plan" data-skillLevel = "57">
 									 <em style="width: 57%"></em>
 									</span>
 									<span class="mr_skill_level">掌握</span>
+								</div>
+								<div class="mr_skill_con">
+									<span class="mr_skill_name" title="jquery">jquery</span>
+									<span class="mr_skill_plan" data-skillLevel = "79">
+									 <em style="width: 79%"></em>
+									</span>
+									<span class="mr_skill_level">精通</span>
+								</div>
+								<div class="mr_skill_con">
+									<span class="mr_skill_name" title="vue">vue</span>
+									<span class="mr_skill_plan" data-skillLevel = "66">
+									 <em style="width: 66%"></em>
+									</span>
+									<span class="mr_skill_level">精通</span>
 								</div>
 							</div>
 						</div>
@@ -643,7 +797,7 @@ content:"...";
 
 				<div class="mr_self_state">
    	 				<div class="form_wrap mr_self_s resume_status">
-						·&nbsp;我目前已离职，可快速到岗&nbsp;·
+						·&nbsp;我目前正在职，正考虑换个新环境&nbsp;·
 	   	 			</div>
 				</div>
 			</div>
